# SVMTK

./: .gitignore  .gitmodules  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Dockerfile  README.md  REQUIREMENTS.md  TODO  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-conda-packages.yml  test-build.yml
CGALBrainMesh/: CGALMeshCreator.h  CGALSurface.cpp  Polyhedral_vector_to_labeled_function_wrapper.h  implicit_functions.h
OLD/: CGALSurface.cpp  CGALSurface.h
brainmesh.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cmake/: FindGMP.cmake
conda-recipe/: environment.yml  meta.yaml  meta.yml
conda.recipe/: meta.yml
demo/: setup
demo/src/: extraction  extraction+mesh  mesh  remesh  smooth
demos/book-demo/: extract_surfaces.sh  extraction.sh  mesh.py  mesh_lh_parenchyma.py  remesh.py  remesh_surface.py  smooth_surface.py  volume_meshing_surface.py
docker/: Dockerfile
docs/source/: Connectivity.rst  Examples.rst  ExamplesDomain.rst  ExamplesSlice.rst  ExamplesSurface.rst  Guides.rst  Installation.rst  Repair.rst  Requirements.rst  SVMTK.rst  SubdomainMap.rst  conf.py  index.rst
examples/: README.md  bifurcation_in_cube.py  bifurcation_in_tube.py  boolean_operations.py  clip.py  collapse.py  extension.py  fill_holes.py  hole_filling.py  implicit_surface.py  make_plane.py  mesh_3d.py  mesh_slice.py  new_reconstruction.py  polylines.py  protect_edges.py  pvs_artery.py  reconstruct.py  reconstruction.py  remeshing.py  self_intersections.py  seperate_close_junctures.py  smoothing.py  stitch.py  subdomain.py  subdomains.py  surface_overlapp.py  triangulate.py
examples/Domain/: bifurcation_in_cube.py  combine_surfaces.py  examlpe_add_extension.py  exampel_make_subdomains.py  example_3D_reduction_to_2D.py  example_bifurcation_in_cube.py  example_boundary_segmentations.py  example_four_cube_surfaces.py  example_heliix_edges_in_cylinder.py  example_make_cylinder.py  example_make_implicit_mesh.py  example_mark_subdomain_interfaces.py  example_mesh_with_subdomainmap.py  example_meshing_multiple_surfaces.py.py  example_preserve_surface_borders.py  example_preserve_surface_borders_in_plane.py  example_reduction_realstic_case.py  example_remove_subdomain.py  extension_2.py  intersecting_boxes.py  make_cone.py  make_cylinder.py  make_implicit_mesh.py  make_subdomains.py  polylines.py  test_meshing_resolution.py
examples/Slice/: example_add_subdomain_tags.py  example_combine_slices.py  example_export_as_surface.py  example_keep_largest_connected_component.py  example_make_2d_mesh.py  example_slices_from_surface.py
examples/Slices/: axial-slice--12.082214285714286.vtu  axial-slice-20.136471428571426.vtu  axial-slice-36.245814285714275.vtu  axial-slice-4.02712857142857.vtu  axial_slices.py  example_axial_slice_mesh.py  example_axial_slice_surface.py  example_axial_slices.py  example_mesh_slice.py  example_slice_surface.py  mesh_slice.py  test.vtu
examples/Surface/: boolean_operations.py  example_boolean_operations.py  example_clip.py  example_connection.py  example_edge_collapse.py  example_extension.py  example_fill_holes.py  example_increment_operations.py  example_make_csg_geometries.py  example_make_cylinder.py  example_make_implicit_surface.py  example_reconstruction.py  example_remeshing.py  example_repair_self_intersection.py  example_separate_narrow_gaps.py  example_seperate_narrow_gaps.py  example_smoothing.py  example_surface_overlap.py  example_surface_overlapp.py  example_triangulate.py  extension.py  fill_holes.py  foo.off  new_reconstruction.py  reconstruction.py  remeshing.py  seperate_narrow_gaps.py  smoothing.py  surface_overlapp.py  surface_overlapp_after1.off  surface_overlapp_after2.off  surface_overlapp_before1.off  surface_overlapp_before2.off  triangulate.py
examples/Surface/results/: blobby_difference_eight.off  blobby_intersection_eight.off  blobby_union_eight.off  collapsed_shark.off  remeshed_pig.off  smoothed_pig.off  triangularP.off
examples/data/: blobby.off  blobby_3cc.off  horizons-domain.off  horizons.off  sphere_r6.off
include/: CGALMeshCreator.cpp  CGALMeshCreator.h  CGALSlice.h  CGALSurface.cpp  CGALSurface.h  Domain.h  Errors.h  Neuron.cpp  Neuron.h  Polyhedral_vector_to_labeled_function_wrapper.h  Slice.h  SubdomainMap.h  Surface.h  compile  convex_hull.h  docstrings.h  edge_collapse.hpp  read_polygons_STL.h  reconstruct_surface.h  remove_isolated_vertices.h  surface_mesh.hpp  surface_mesher.h  utils.h
python/src/: SVMTK.cpp  brainmesh.cpp  svmtk.cpp
scratch/: meshes.py  polyhedral_wrapper_without_bounding.cpp  preprocess.py
scratch/CGALBrainMesh/: CGALMeshCreator.cpp  CGALMeshCreator.h  CGALSurface.cpp  CGALSurface.h  CMakeLists.txt  _CMakeLists.txt
scratch/meshes/: meshes.py  meshfunction.py  poisson_subdomain_demo.py
source/: convert.py
source/brainmesh.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
source/brainmesh/utils/: __init__.py  asc2domain.py  convert.py  mesh_conversion_utils.py  plotter.py
source/cpp/: CMakeLists.txt  edge_collapse.h  fix_polyhedron.cpp  fixpolyhedron.h  hole_filling.h  remeshing.h  simplify.h  stitching.h
source/python/: asc2domain.py  mesh_conversion_utils.py
source/remeshing/: fix_polyhedron.cpp  poisson_reconstruction.cpp  selfintersecting.cpp
source/remesihng/: poisson_reconstruction.cpp
source/surface-reconstruction/: CMakeLists.txt  grid_simplification.cpp  hierarchy_simplification.cpp  normal_estimation.cpp  upsampling.cpp  wlop.cpp
source/utils/: sm.cpp
src/svmtk_utils/: __init__.py  convert.py  subdomain_slice.py
test/pybind11/: test_basic.py
tests/: CMakeLists.txt  Domain_test.py  Slice_test.py  SubdomainMap_test.py  Surface_test.py  Utility_test.py  cpp_test.py  test_Domain.cpp  test_Slice.cpp  test_Surface.cpp
tests/Data/: cube.mesh  cube.off  cube.stl  narrow_gap.off  s1.off  s2.off  slice.mesh  slice.off  slice.stl  slice.vtu  torus.off  torus2.off
