[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "SVMTK"
version = "2.0"
license = {text = "GNU GENERAL PUBLIC LICENSE"}
description = "A collection of tools for volume and surface meshing"
keywords = ["Surface", "Volume", "Meshing", "Toolkit"]
urls = {Homepage = ""}
requires-python = ">=3"
dependencies = ["numpy"]
authors = [
  {name = "Lars Magnus Valnes"},
  {name = "Jakob Schreiner"},
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
zip-safe = false
test-suite = "tests"
include-package-data = false

[tool.setuptools.packages.find]
include = ["SVMTK"] # SVMTK.*
namespaces = false

